2005-08-23  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_cairo_ft_scaled_font_show_glyphs): 
	when creating the temporary mask, do glyph ADD mask, not 
	(glyph IN source) ADD mask. Set the mask as having component
	alpha when it's 4-channel.

	* test/text-antialias-subpixel.c test/Makefile.am: No longer XFAIL.
	
	* test/text-antialias-gray.c test/text-antialias-subpixel.c
	* test/text-antialias-none.c (draw): Don't turn off metrics
	hinting, it doesn't make sense.

	* test/text-antialias-*-ref.png: Update.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* CODING_STYLE: Revise the description of indentation and tabs to
	be clear (I hope).

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/text-antialias-subpixel.c (draw): Clear to opaque white at
	the beginning of the test so that the 0 alpha values in the
	destination don't cause bizarre results.
	(main): Note that only the image backend should fail now.

	* test/text-antialias-subpixel-ref.png: Add new reference image.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/text-rotate-ref.png:
	* test/text-rotate.c: (draw), (main): Add more comments on the
	improved state of this bug. Commit a reference image generated
	with cairo_text_path; cairo_fill. (We may not require getting this
	exact result, but I think it is worth examining the differences
	closely.)

2005-08-23  Carl Worth  <cworth@cworth.org>

	* Makefile.am: Add docs-publish target to build and push
	documentation, (since our nightly server-side cron job is not
	working right now).

2005-08-23  Carl Worth  <cworth@cworth.org>

	* BUGS:
	* src/cairo-xlib-screen.c: Move comment about missing cleanup of
	caches on XCloseDisplay from BUGS to a
	_cairo_xlib_close_display. Also covered in bug #4120.

2005-08-23  Carl Worth  <cworth@cworth.org>

	* test/Makefile.am:
	* test/caps-sub-paths.c: (main): Remove caps-sub-paths from the
	XFAIL list since it is fixed now.

2005-08-23  Carl Worth  <cworth@cworth.org>

	Fix for bug #4205:
