@@ -1,3 +1,10 @@
+2005-08-23  Carl Worth  <cworth@cworth.org>
+
+	* src/cairo.h:
+	* src/cairoint.h: Move CAIRO_CONTENT_VALID and CAIRO_FORMAT_VALID
+	from the public cairo.h to the private cairoint.h where they
+	belong.
+
 2005-08-23  Owen Taylor  <otaylor@redhat.com>
 
 	* src/cairo-ft-font.c (_cairo_ft_scaled_font_show_glyphs): 
